# jupyiverse

./: .gitignore  README.md  docker-compose.yml  makefile  pyproject.toml
jupyterhub/: Dockerfile  jupyterhub_config.py
jupyterhub/requirements/: jupyterhub.txt
jupyterlab/: jupyter_lab_config.py  overrides.json
jupyterlab/docker/: Dockerfile.2004  Dockerfile.2204  Dockerfile.cuda112-2004-py310  Dockerfile.cuda118-2004-py310  Dockerfile.cuda118-2204  Dockerfile.cuda118-2204-py311
jupyterlab/docker/cuda/: Dockerfile.cuda112-2004  Dockerfile.cuda118-2004  Dockerfile.cuda118-2204
jupyterlab/requirements/: jupyterlab-py310.txt  jupyterlab-py38.txt  jupyterlab.in  jupyterlab.txt  main-py310-cuda112.txt  main-py310-cuda118.txt  main-py311-cuda118.txt
jupyterlab/requirements/in/: base-cuda112.in  base-cuda118.in  dev.in  jupyterlab.in  main.in
jupyterlab/resources/: pylintrc
requirements/: dev.txt
